# geant4-leo-proton-detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rodar.txt
analysis/: analyze_edep.py
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  ActionInitialization.hh  CMakeCache.txt  DetectorConstruction.cc  EventAction.cc  EventAction.hh  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh  cmake_install.cmake  main.cc
src/leo_detector.dir/Release/leo_detector.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  leo_detector.lastbuildstate
src/macros/: init.mac  run_100k.mac
src/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
